# little-adbcv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: example.hpp
include/common/: format.hpp  log.hpp  stream.hpp
include/control/: adb.hpp  cmd.hpp  miniadb.hpp
include/util/: util.hpp
include/vision/: vision.hpp
src/: example.hpp  main.cc  main.cpp
src/common/: log.hpp  timing.hpp
src/vision/: detect.hpp
